bk_ida/gccida/g0/handle_rd_kill_set
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/handle_rd_kill_set/src/gcse.c:3436:40: error: use of undeclared identifier 'uid_cuid_1'
rd_kill[bb->index]->elms[*( ( _DWORD *)uid_cuid_1 + this_reg->insn->fld[0].rtint) >> 6] |= 1LL << ( *( ( _DWORD *)uid_cuid_1 + this_reg->insn->fld[0].rtint) & 0x3F); 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/handle_rd_kill_set/src/gcse.c:3436:115: error: use of undeclared identifier 'uid_cuid_1'
rd_kill[bb->index]->elms[*( ( _DWORD *)uid_cuid_1 + this_reg->insn->fld[0].rtint) >> 6] |= 1LL << ( *( ( _DWORD *)uid_cuid_1 + this_reg->insn->fld[0].rtint) & 0x3F); 
                                                                                                                  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/handle_rd_kill_set/src/obj/gcse.o] Error 1
